force-app/main/default/objects/Notification__c/fields/Is_Read_c__c.field-meta.xml
<CustomField>
    <fullName>Is_Read_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Read_c</label>
    <type>Checkbox</type>
</CustomField>