force-app/main/default/objects/Notification__c/fields/Message_C__c.field-meta.xml
<CustomField>
    <fullName>Message_C__c</fullName>
    <label>Message_C</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>