force-app/main/default/objects/Notification__c/fields/Type_C__c.field-meta.xml
<CustomField>
    <fullName>Type_C__c</fullName>
    <label>Type_C</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vote</fullName>
            </value>
            <value>
                <fullName>Comment</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>